# breathing-light

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
board/stm32f072b-disco/: CMakeLists.txt  flash.ld  startup.s
board/stm32f072b-disco/cmsis-core/: CMakeLists.txt  system_stm32f0xx.c
board/stm32f072b-disco/driver/: CMakeLists.txt  stm32f0xx_hal_conf.h
board/stm32f072b-disco/stm32f072rbtx/: CMakeLists.txt  flash.ld
board/stm32f072b-disco/stm32f072rbtx/cmsis-core/: CMakeLists.txt
board/stm32f072b-disco/stm32f072rbtx/driver/: CMakeLists.txt
design/: breathing_curve.py
firmware/: CMakeLists.txt  breathing.hpp  freq.hpp  main.cpp
